make initial changes to config file

--- a/_config.yml
+++ b/_config.yml
@@ -12,8 +12,8 @@ title: John Doe's Portfolio # This is what shows up in the tab of the browser
 
 
 # Hero Section
-name: John Doe
-headline: headline message
+name: Dinh Binh Le
+headline: UH Senior Computer Engineering Student
 description: >- # dont remove this line. this will ignore all new lines until the next section
   Write an awesome intro and discuss your highlights and qualification. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -25,15 +25,15 @@ profile_image: ./assets/images/profile-image/avatar.jpeg
 
 # Link your resume
 # You can place your resume in assets/resume/{resume file.pdf} or add external link such as pdf saved in google drive 
-resume-url: https://drive.google.com/file/d/13Z3duVzh-gguPU5r03oJVEE6rV9rd3DS/view?usp=sharing
+
 
 
 # Set up external links - this will show up as small icons next to your name.
 
 external-links:    # input only your own url slug. The icons with missing entries will not appear.
-  linkedin: test    # https://www.linkedin.com/in/{your url slug} 
-  github: leea12    # https://github.com/{your url slug} 
-  stackoverflow: test      # https://stackoverflow.com/users/{your url slug}
+  linkedin: dinh-binh-le    # https://www.linkedin.com/in/{your url slug} 
+  github: bindle03    # https://github.com/{your url slug} 
+  stackoverflow:      # https://stackoverflow.com/users/{your url slug}
   medium:            # https://medium.com/@{your url slug} 
   x-twitter:   # https://x.com/{your url slug} 
   threads:            # https://threads.net/@{your url slug} 
@@ -45,50 +45,50 @@ external-links:    # input only your own url slug. The icons with missing entrie
 
 # Skills Section - Add the list of your Skills by categories/tools. The indentation for each level needs to be precise. 
 skills:
-  - category: 3D Modeling
+  - category: Digital Design / VLSI
     tools:
-    - Onshape
-    - Solidworks
-    - Creo
-    - Fusion 360 (Autodesk)
-    - Blender (for complex shapes or animations)
-    - Siemens NX
-    - Inventor (Autodesk)
-    - CATIA (Dassault Systèmes)
-  - category: Prototyping
+    - Altera Cyclone V FPGA on DE0-CV Board
+    - Verilog HDL
+    - UVM
+    - RTL Design & Simulation
+    - Testbench Design
+    - ModelSim
+    - Quartus 
+    - LTSpice
+  - category: Embedded Systems
     tools:
-    - SLA
-    - CNC
-    - FDM
-    - SLS
-    - DMLS
-    - PolyJet Printing
-    - Vacuum Casting
-    - Laser Cutting
-    - Water Jet Cutting
-    - Arduino / Raspberry Pi
-    - Breadboarding for circuit testing
-  - category: Design Standards / Practices
+    - C
+    - FreeRTOS
+    - TM4C123G (TI Lauchpad)
+    - UART
+    - SPI
+    - I2C
+    - CAN Bus
+    - EtherCAT
+  - category: Robotics & Control
     tools:
-    - GD&T ASME Y14
-    - ISO fits and tolerances
-    - PLM (PTC Windchill / Arena)   
-  - category: PCB Design
+      - ROS2
+      - PID Control
+      - PWM Motor Control
+      - Distance & Reflectance Sensors
+      - Real-time Feedback Loops
+      - IR/Ultrasonic Integration
+      - Robot Simulation (RViz/Gazebo)  
+  - category: Programming Languages
     tools:
-    - Altium Designer
-    - Altium
-    - Eagle 
-    - KiCad
-  - category: Problem Solving / Risk Management
-    tools:
-    - Root Cause Analysis (e.g., 5 Whys, Fishbone Diagram)
-    - DFMEA / PFMEA 
-    - Six Sigma methodologies
-    - Shain Red-X
-
+    - C
+    - C++
+    - Python
+    - Verilog
+    - Shell
+    - Bash
+    - SQL
+  - category: Other Tools
+    - Git / Github
+    - Linux
 
 # Contact Form Setup. Setup an account and copy over the key. When someone fills out the form, it will be received in your email.
-formspree-key:   https://formspree.io/f/{8-digit key}
+formspree-key:   https://formspree.io/f/mvgrpobz
 
 
 
