--- a/_config.yml
+++ b/_config.yml
@@ -84,8 +84,9 @@ skills:
     - Bash
     - SQL
   - category: Other Tools
+    tools:
     - Git / Github
-    - Linux
+    - Linuxx
 
 # Contact Form Setup. Setup an account and copy over the key. When someone fills out the form, it will be received in your email.
 formspree-key:   https://formspree.io/f/mvgrpobz
