--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title: John Doe's Portfolio # This is what shows up in the tab of the browser
 
 
 # Hero Section
-name: Dinh Binh Le
+name: Dinh Binh 
 headline: UH Senior Computer Engineering Student
 description: >- # dont remove this line. this will ignore all new lines until the next section
   Write an awesome intro and discuss your highlights and qualification. You can edit this
