--- a/_config.yml
+++ b/_config.yml
@@ -89,7 +89,7 @@ skills:
     - Linux
 
 # Contact Form Setup. Setup an account and copy over the key. When someone fills out the form, it will be received in your email.
-formspree-key:   https://formspree.io/f/mvgrpobz
+formspree-key: mvgrpobz
 
 
 
