--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ headline: UH Senior Computer Engineering Student
 description: >- # dont remove this line. this will ignore all new lines until the next section
   I am a senior computer engineering student at Cullen College of Engineering at the University of Houston with a strong interest 
   in FPGA design, low-level development, and embedded systems. On this personal portfolio, you can find information about 
-  my projects and my broader skills that is might not shown on my resume :)
+  my projects and some of my skills that is not sufficiently shown on my resume :)
 # Place your profile image in /assets/images/profile-image/folder and edit the file name
 profile_image: ./assets/images/profile-image/avatar.jpeg
 
@@ -94,7 +94,7 @@ formspree-key: mvgrpobz
 
 # Active theme (Updatethis to switch themes). Make sure to keep the indentation the samne.
 colors: # this is the basic theme
-  text: "#wc3333"
+  text: "#2c3333"
   border: "#e0f2ef"
   link: "#40b3a2"
   highlight: "#2a9d8f"
@@ -110,7 +110,7 @@ basic theme:
   background: "#ffffff"
   light_background: "#f3f5fb"
   
-  mint theme:
+mint theme:
   text: "#2c3333"
   border: "#e0f2ef"
   link: "#40b3a2"
